Fix alignment issues in tooltip

--- a/assets/styles/tooltip.css
+++ b/assets/styles/tooltip.css
@@ -1,8 +1,8 @@
 div.tooltip {	
     position: absolute;			
     text-align: center;			
-    width: 60px;					
-    height: 70px;					
+    width: 70px;					
+    height: 50px;					
     padding: 2px;				
     font: 12px sans-serif;		
     border: 0px;		
